<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarFadeDuration="100"
    android:scrollbarThumbVertical="@drawable/accent_bg"
    android:overScrollMode="never"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="48dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/prevention_close"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/close_icon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="32dp"
                android:src="@drawable/prevention_doctor_icon" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_can_you_prevent"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/prevention_top_text"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maintain_a_safe_distance"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorRecoveredTrend"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/safe_distance"
                    android:textColor="@color/colorPrimaryDark"
                    />

            </LinearLayout>

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/distance_icon"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wash_your_hands"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorRecoveredTrend"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/wash_hands"
                    android:textColor="@color/colorPrimaryDark"
                    />

            </LinearLayout>

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/wash_hands_icon"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wear_a_mask"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorRecoveredTrend"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/wear_mask"
                    android:textColor="@color/colorPrimaryDark"
                    />

            </LinearLayout>

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/mask_icon"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_touch_face"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorRecoveredTrend"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/use_tissue"
                    android:textColor="@color/colorPrimaryDark"
                    />

            </LinearLayout>

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/no_touch_icon"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stay_home_stay_safe"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorRecoveredTrend"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/stay_home"
                    android:textColor="@color/colorPrimaryDark"
                    />

            </LinearLayout>

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/stay_home_icon"/>

        </LinearLayout>

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingVertical="30dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/google"
                app:tint="@color/colorAccent" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/github"
                app:tint="@color/colorAccent" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/instagram"
                app:tint="@color/colorAccent" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/facebook"
                app:tint="@color/colorAccent" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/copyright"
            android:textColor="@color/colorAccent"
            android:textSize="8sp" />

    </LinearLayout>

</ScrollView>