<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbarFadeDuration="100"
    android:scrollbarThumbVertical="@drawable/accent_bg"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="48dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/symptoms_close"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/close_icon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="32dp"
                android:src="@drawable/doctor_icon" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_are_covid_19_symptoms"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/symptoms_top_text"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:paddingHorizontal="64dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fever"
                android:textColor="@color/colorDeathTrend"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/fever_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:paddingHorizontal="64dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cough"
                android:textColor="@color/colorDeathTrend"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/cough_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:paddingHorizontal="64dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loss_of_breath"
                android:textColor="@color/colorDeathTrend"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/breath_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:paddingHorizontal="64dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dizziness"
                android:textColor="@color/colorDeathTrend"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/dizziness_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:paddingHorizontal="64dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sore_throat"
                android:textColor="@color/colorDeathTrend"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/sore_throat_icon" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/symptoms_bottom_text"
            android:textColor="@color/colorPrimaryDark" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingVertical="30dp">

            <ImageView
                android:id="@+id/sgoogle"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/google"
                app:tint="@color/colorAccent" />

            <ImageView
                android:id="@+id/sgithub"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/github"
                app:tint="@color/colorAccent" />

            <ImageView
                android:id="@+id/sinstagram"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/instagram"
                app:tint="@color/colorAccent" />

            <ImageView
                android:id="@+id/sfacebook"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/facebook"
                app:tint="@color/colorAccent" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/copyright"
            android:textColor="@color/colorAccent"
            android:textSize="8sp" />

    </LinearLayout>

</ScrollView>