<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:shimmer_auto_start="true"
        app:shimmer_duration="800"
        android:layout_marginTop="96dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <include layout="@layout/placeholder_list_item" />
            <include layout="@layout/placeholder_list_item" />
            <include layout="@layout/placeholder_list_item" />
            <include layout="@layout/placeholder_list_item" />
            <include layout="@layout/placeholder_list_item" />
            <include layout="@layout/placeholder_list_item" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <RelativeLayout
        android:id="@+id/highest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topcases"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/day_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:popupBackground="@color/colorAccentTint"
                android:backgroundTint="@color/colorPrimaryDark" />

        </LinearLayout>

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/search_icon"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            app:tint="@color/colorPrimaryDark"
            android:focusable="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/sort_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highest"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginEnd="5dp"
            android:text="@string/sorted_by" />

        <RadioGroup
            android:id="@+id/sort_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/sort_by_today_cases"
            >
            <RadioButton
                android:id="@+id/sort_by_today_cases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:button="@android:color/transparent"
                android:background="@drawable/sort_bg_selector"
                android:text="@string/cases"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                />
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:button="@android:color/transparent"
                android:background="@drawable/sort_bg_selector"
                android:text="@string/deaths"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                />
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:button="@android:color/transparent"
                android:background="@drawable/sort_bg_selector"
                android:text="@string/active"
                android:textSize="16sp"
                />

        </RadioGroup>

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_below="@+id/sort_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:id="@+id/list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:headerDividersEnabled="true"
            android:drawSelectorOnTop="true"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbarThumbVertical="@drawable/accent_bg"
            android:scrollbarFadeDuration="100"
        />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/accent_bg"
        android:clickable="true"
        android:visibility="gone"
        app:defaultQueryHint="@string/search"
        app:queryHint="@string/search"
        android:iconifiedByDefault="false"
        android:focusable="true" />

    <ImageView
        android:id="@+id/empty_tw"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
    />

</RelativeLayout>